--- a/html/public/articleList.html
+++ b/html/public/articleList.html
@@ -214,7 +214,7 @@
 						);
 					}
 
-					//此处根据具体的文章性质  判断是否添加 new hot标志。
+					//TODO 此处根据具体的文章性质  判断是否添加 new hot标志。
 					if(i == 1) {
 						$li.find('p.mui-ellipsis').prepend('<span class="mui-icon iconfont icon-new red"></span>&nbsp;&nbsp;');
 					}
@@ -222,21 +222,13 @@
 						$li.find('p.mui-ellipsis').prepend('<span class="mui-icon iconfont icon-hot2 red"></span>&nbsp;&nbsp;');
 					}
 
-					//有的页面需要 ×按钮  有的不需要 根据参数判断是否显示
-					//					var self = plus.webview.currentWebview();
-					if(1 == 1) {
-						$li.find('p.mui-ellipsis').append('<p class="mui-pull-right closeempty"><span class="mui-icon mui-icon-closeempty"></span></p>');
-					}
+					$li.find('p.mui-ellipsis').append('<p class="mui-pull-right closeempty"><span class="mui-icon mui-icon-closeempty"></span></p>');
 
 					if(position == 'before') {
 						table.prepend($li);
 					} else {
 						table.append($li);
 					}
-//					var wn = plus.webview.currentWebview();
-//					if(pageNum == 1 && !wn.navName){
-//						table.prepend('<li class="img-li"><img src="../../images/muwu.jpg"></li>');
-//					}
 				}
 			}
 			/**
