--- a/html/public/collectList.html
+++ b/html/public/collectList.html
@@ -214,18 +214,12 @@
 						);
 					}
 
-					//此处根据具体的文章性质  判断是否添加 new hot标志。
+					//此处根据具体的文章性质  判断是否添加 new hot标志。 TODO
 					if(i == 1) {
 						$li.find('p.mui-ellipsis').prepend('<span class="mui-icon iconfont icon-new red"></span>&nbsp;&nbsp;');
 					}
 					if(i == 2) {
 						$li.find('p.mui-ellipsis').prepend('<span class="mui-icon iconfont icon-hot2 red"></span>&nbsp;&nbsp;');
-					}
-
-					//有的页面需要 ×按钮  有的不需要 根据参数判断是否显示
-					//					var self = plus.webview.currentWebview();
-					if(1 == 1) {
-						$li.find('p.mui-ellipsis').append('<p class="mui-pull-right closeempty"><span class="mui-icon mui-icon-closeempty"></span></p>');
 					}
 
 					if(position == 'before') {
@@ -308,7 +302,7 @@
 					mui.toast('请先登录');
 					return;
 				}
-				mui.ajax('http://172.168.17.60:8080/mis-app/Personal/containall', {
+				mui.ajax('http://172.168.12.96:8080/mis-app/Personal/containall', {
 					data: {
 						"jdbcTemplateName": "mysqlTemplate",
 						"pFile": "Personal",
